fixed overflow

--- a/#sourse/scss/style.scss
+++ b/#sourse/scss/style.scss
@@ -6,6 +6,7 @@ body {
     font-family: $ffR;
     color: $colorT;
     -webkit-font-smoothing: antialiased;
+    overflow: hidden;
 }
 
 //Container
